// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`readme buildReadmeContent should return readme default template content 1`] = `
"<h1 align=\\"center\\">Welcome to readme-md-generator 👋</h1>
<p>
  <a href=\\"https://www.npmjs.com/package/readme-md-generator\\">
    <img alt=\\"Version\\" src=\\"https://img.shields.io/npm/v/readme-md-generator.svg\\">
  </a>
  <img src=\\"https://img.shields.io/badge/npm-%3E%3D5.5.0-blue.svg\\" />
  <img src=\\"https://img.shields.io/badge/node-%3E%3D%209.3.0-blue.svg\\" />
  <a href=\\"https://github.com/kefranabg/readme-md-generator#readme\\">
    <img alt=\\"Documentation\\" src=\\"https://img.shields.io/badge/documentation-yes-brightgreen.svg\\" target=\\"_blank\\" />
  </a>
  <a href=\\"https://github.com/kefranabg/readme-md-generator/graphs/commit-activity\\">
    <img alt=\\"Maintenance\\" src=\\"https://img.shields.io/badge/Maintained%3F-yes-green.svg\\" target=\\"_blank\\" />
  </a>
  <a href=\\"https://github.com/kefranabg/readme-md-generator/blob/master/LICENSE\\">
    <img alt=\\"License: MIT\\" src=\\"https://img.shields.io/badge/License-MIT-yellow.svg\\" target=\\"_blank\\" />
  </a>
  <a href=\\"https://twitter.com/FranckAbgrall\\">
    <img alt=\\"Twitter: FranckAbgrall\\" src=\\"https://img.shields.io/twitter/follow/FranckAbgrall.svg?style=social\\" target=\\"_blank\\" />
  </a>
</p>

> Generates beautiful README files from git config &amp; package.json infos

### 🏠 [Homepage](https://github.com/kefranabg/readme-md-generator#readme)

## Prerequisites

- npm &gt;=5.5.0
- node &gt;= 9.3.0

## Install

\`\`\`sh
npm install
\`\`\`

## Usage

\`\`\`sh
npm start
\`\`\`

## Run tests

\`\`\`sh
npm run test
\`\`\`

## Author

👤 **Franck Abgrall**

* Twitter: [@FranckAbgrall](https://twitter.com/FranckAbgrall)
* Github: [@kefranabg](https://github.com/kefranabg)

## 🤝 Contributing

Contributions, issues and feature requests are welcome!<br />Feel free to check [issues page](https://github.com/kefranabg/readme-md-generator/issues).

## Show your support

Give a ⭐️ if this project helped you!

<a href=\\"https://www.patreon.com/FranckAbgrall\\">
  <img src=\\"https://c5.patreon.com/external/logo/become_a_patron_button@2x.png\\" width=\\"160\\">
</a>

## 📝 License

Copyright © 2019 [Franck Abgrall](https://github.com/kefranabg).<br />
This project is [MIT](https://github.com/kefranabg/readme-md-generator/blob/master/LICENSE) licensed.

***
_This README was generated with ❤️ by [readme-md-generator](https://github.com/kefranabg/readme-md-generator)_"
`;

exports[`readme buildReadmeContent should return readme default template no html content 1`] = `
"# Welcome to readme-md-generator 👋
[![Version](https://img.shields.io/npm/v/readme-md-generator.svg)](https://www.npmjs.com/package/readme-md-generator)
![Prerequisite](https://img.shields.io/badge/npm-%3E%3D5.5.0-blue.svg)
![Prerequisite](https://img.shields.io/badge/node-%3E%3D%209.3.0-blue.svg)
[![Documentation](https://img.shields.io/badge/documentation-yes-brightgreen.svg)](https://github.com/kefranabg/readme-md-generator#readme)
[![Maintenance](https://img.shields.io/badge/Maintained%3F-yes-green.svg)](https://github.com/kefranabg/readme-md-generator/graphs/commit-activity)
[![License: MIT](https://img.shields.io/badge/License-MIT-yellow.svg)](https://github.com/kefranabg/readme-md-generator/blob/master/LICENSE)
[![Twitter: FranckAbgrall](https://img.shields.io/twitter/follow/FranckAbgrall.svg?style=social)](https://twitter.com/FranckAbgrall)

> Generates beautiful README files from git config &amp; package.json infos

### 🏠 [Homepage](https://github.com/kefranabg/readme-md-generator#readme)

## Prerequisites

- npm &gt;=5.5.0
- node &gt;= 9.3.0

## Install

\`\`\`sh
npm install
\`\`\`

## Usage

\`\`\`sh
npm start
\`\`\`

## Run tests

\`\`\`sh
npm run test
\`\`\`

## Author

👤 **Franck Abgrall**

* Twitter: [@FranckAbgrall](https://twitter.com/FranckAbgrall)
* Github: [@kefranabg](https://github.com/kefranabg)

## 🤝 Contributing

Contributions, issues and feature requests are welcome!

Feel free to check [issues page](https://github.com/kefranabg/readme-md-generator/issues).

## Show your support

Give a ⭐️ if this project helped you!

[![support us](https://img.shields.io/badge/become-a patreon%20us-orange.svg?cacheSeconds=2592000)](https://www.patreon.com/FranckAbgrall)


## 📝 License

Copyright © 2019 [Franck Abgrall](https://github.com/kefranabg).

This project is [MIT](https://github.com/kefranabg/readme-md-generator/blob/master/LICENSE) licensed.

***
_This README was generated with ❤️ by [readme-md-generator](https://github.com/kefranabg/readme-md-generator)_"
`;
